# advent_2023

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
advent/: cli.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
advent/tests/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py
advent/tests/resources/day_2/: example_puzzle_1.txt
advent/tests/resources/day_4/: example.txt  example_puzzle_2.txt
